fix: Set grid container height to fit viewport
The grid container was too tall, which caused it to not be scrollable.
Thus, the code to autoscroll when an element is dragged to the bottom
of the screen was broken. This is now fixed.

--- a/Src/OmmelSamvirke.Web/Pages/PageEditor/Components/PageEditorLayout.razor.css
+++ b/Src/OmmelSamvirke.Web/Pages/PageEditor/Components/PageEditorLayout.razor.css
@@ -1,6 +1,7 @@
 #grid-background {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 64px);
+    height: calc(100dvh - 64px);
     background-color: #FBFBFB;
     overflow: scroll;
     padding: 50px 0;
@@ -23,4 +24,11 @@
             10px 10px,
             10px 10px;
     box-shadow: 0 0 4px 2px rgba(100, 100, 100, 0.25);
+}
+
+@media (max-width: 600px) {
+    #grid-background {
+        height: calc(100vh - 56px);
+        height: calc(100dvh - 56px);
+    }
 }
